Updated to dual files Improved? auto ability searching, but doesn't work properly with temporary strong HP+s - Must be manually inputted